# shogiutil-rs

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
src/: board.rs  debug.rs  error.rs  lib.rs  model.rs  parser.rs  piece.rs  usi.rs
src/board/: bitboard.rs  legal_move.rs  mod.rs
src/piece/: mod.rs  moves.rs
