[package]
name = "shogiutil"
version = "0.7.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
description = "A collection of tools to handle shogi data."
license-file = "./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
thiserror = "1.0.20"
